crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_combined_field_and_element_validators.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/optional_collection.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Element validators for the `", "scores", "` field of [`", "OrderWithLenCheck",
    "`]: [`", "RangeValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum OrderWithLenCheckScoresElementKorumaValidatorRef<'koruma> {
    RangeValidation(&'koruma RangeValidation<i32>),
}
#[doc = concat!(
    "Per-element validation errors for the `", "scores", "` field of [`",
    "OrderWithLenCheck", "`]."
)]
#[derive(Debug, Default)]
pub struct OrderWithLenCheckScoresElementKorumaValidationError {
    range_validation: Option<RangeValidation<i32>>,
}
impl OrderWithLenCheckScoresElementKorumaValidationError {
    #[doc = concat!("Returns the failed `", "RangeValidation", "` validator, if any.")]
    pub fn range_validation(&self) -> Option<&RangeValidation<i32>> {
        self.range_validation.as_ref()
    }
    #[doc = concat!("Returns all failed element validators for `", "scores", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<
        Item = OrderWithLenCheckScoresElementKorumaValidatorRef<'_>,
    > + '_ {
        [
            self
                .range_validation
                .as_ref()
                .map(OrderWithLenCheckScoresElementKorumaValidatorRef::RangeValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validators for the `", "scores", "` field of [`", "OrderWithLenCheck", "`]: [`",
    "VecLenValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum OrderWithLenCheckScoresKorumaValidatorRef<'koruma> {
    VecLenValidation(&'koruma VecLenValidation<i32>),
}
#[doc = concat!(
    "Validation errors for the `", "scores", "` field of [`", "OrderWithLenCheck",
    "`].\n\nField validators: [`", "VecLenValidation", "`]. Element validators: [`",
    "RangeValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct OrderWithLenCheckScoresKorumaValidationError {
    vec_len_validation: Option<VecLenValidation<i32>>,
    element_errors: Vec<(usize, OrderWithLenCheckScoresElementKorumaValidationError)>,
}
impl OrderWithLenCheckScoresKorumaValidationError {
    #[doc = concat!("Returns the failed `", "VecLenValidation", "` validator, if any.")]
    pub fn vec_len_validation(&self) -> Option<&VecLenValidation<i32>> {
        self.vec_len_validation.as_ref()
    }
    #[doc = concat!(
        "Returns all element validation errors for `", "scores", "` of [`",
        "OrderWithLenCheck", "`] with their indices."
    )]
    pub fn element_errors(
        &self,
    ) -> &[(usize, OrderWithLenCheckScoresElementKorumaValidationError)] {
        &self.element_errors
    }
    #[doc = concat!("Returns all failed validators for `", "scores", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = OrderWithLenCheckScoresKorumaValidatorRef<'_>> + '_ {
        [
            self
                .vec_len_validation
                .as_ref()
                .map(OrderWithLenCheckScoresKorumaValidatorRef::VecLenValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.vec_len_validation.is_none() && self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "OrderWithLenCheck",
    "`].\n\nContains per-field error structs for ", "field: `scores`", "."
)]
#[derive(Debug, Default)]
pub struct OrderWithLenCheckKorumaValidationError {
    scores: OrderWithLenCheckScoresKorumaValidationError,
}
impl OrderWithLenCheckKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "scores", "` field of [`",
        "OrderWithLenCheck", "`]."
    )]
    pub fn scores(&self) -> &OrderWithLenCheckScoresKorumaValidationError {
        &self.scores
    }
}
impl ::koruma::ValidationError for OrderWithLenCheckKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.scores.is_empty()
    }
}
impl ::koruma::ValidationIssues for OrderWithLenCheckKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.scores.vec_len_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "scores",
                        ::core::any::type_name::<VecLenValidation<i32>>(),
                        None,
                        ::std::format!("validation failed for `{}`", "VecLenValidation"),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        for (__koruma_index, __koruma_element_error) in self.scores.element_errors() {
            if __koruma_element_error.range_validation().is_some() {
                __koruma_issues
                    .push(
                        ::koruma::ValidationIssue::element(
                            "scores",
                            *__koruma_index,
                            ::core::any::type_name::<RangeValidation<i32>>(),
                            None,
                            ::std::format!(
                                "validation failed for `{}`", "RangeValidation"
                            ),
                            ::std::vec::Vec::new(),
                        ),
                    );
            }
        }
        __koruma_issues
    }
}
impl OrderWithLenCheck {
    #[doc = concat!(
        "Validates all fields of `", "OrderWithLenCheck",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), OrderWithLenCheckKorumaValidationError> {
        let mut error = OrderWithLenCheckKorumaValidationError {
            scores: OrderWithLenCheckScoresKorumaValidationError {
                vec_len_validation: None,
                element_errors: Vec::new(),
            },
        };
        let mut has_error = false;
        let __field_value = &self.scores;
        {
            let __koruma_builder = VecLenValidation::min(1).max(10);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                Vec<i32>,
                VecLenValidation<i32>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<VecLenValidation<
                i32,
            > as ::koruma::Validate<Vec<i32>>>::validate(&validator, __field_value) {
                error.scores.vec_len_validation = Some(validator);
                has_error = true;
            }
        }
        {
            ::koruma::__private::assert_each_collection_ref::<Vec<i32>, i32>();
        }
        for (idx, __item_value) in self.scores.iter().enumerate() {
            let mut element_error = OrderWithLenCheckScoresElementKorumaValidationError {
                range_validation: None,
            };
            let mut element_has_error = false;
            {
                let __koruma_builder = RangeValidation::<i32>::min(0).max(100);
                ::koruma::__private::assert_element_validator_ready::<
                    _,
                    i32,
                    RangeValidation<i32>,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __item_value,
                    ),
                );
                if !<RangeValidation<
                    i32,
                > as ::koruma::Validate<i32>>::validate(&validator, __item_value) {
                    element_error.range_validation = Some(validator);
                    element_has_error = true;
                }
            }
            if element_has_error {
                error.scores.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for OrderWithLenCheck {
    type Error = OrderWithLenCheckKorumaValidationError;
    fn validate(&self) -> Result<(), OrderWithLenCheckKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for OrderWithLenCheck {}
