crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_each.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/koruma.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Element validators for the `", "scores", "` field of [`", "Order", "`]: [`",
    "GenericRangeValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum OrderScoresElementKorumaValidatorRef<'koruma> {
    GenericRangeValidation(&'koruma GenericRangeValidation<f64>),
}
#[doc = concat!(
    "Per-element validation errors for the `", "scores", "` field of [`", "Order", "`]."
)]
#[derive(Debug, Default)]
pub struct OrderScoresElementKorumaValidationError {
    generic_range_validation: Option<GenericRangeValidation<f64>>,
}
impl OrderScoresElementKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "GenericRangeValidation", "` validator, if any."
    )]
    pub fn generic_range_validation(&self) -> Option<&GenericRangeValidation<f64>> {
        self.generic_range_validation.as_ref()
    }
    #[doc = concat!("Returns all failed element validators for `", "scores", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = OrderScoresElementKorumaValidatorRef<'_>> + '_ {
        [
            self
                .generic_range_validation
                .as_ref()
                .map(OrderScoresElementKorumaValidatorRef::GenericRangeValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for the `", "scores", "` field of [`", "Order",
    "`] (element validators only)."
)]
#[derive(Debug, Default)]
pub struct OrderScoresKorumaValidationError {
    element_errors: Vec<(usize, OrderScoresElementKorumaValidationError)>,
}
impl OrderScoresKorumaValidationError {
    #[doc = concat!(
        "Returns all element validation errors for `", "scores", "` of [`", "Order",
        "`] with their indices."
    )]
    pub fn element_errors(&self) -> &[(usize, OrderScoresElementKorumaValidationError)] {
        &self.element_errors
    }
    pub fn is_empty(&self) -> bool {
        self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Order", "`].\n\nContains per-field error structs for ",
    "field: `scores`", "."
)]
#[derive(Debug, Default)]
pub struct OrderKorumaValidationError {
    scores: OrderScoresKorumaValidationError,
}
impl OrderKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "scores", "` field of [`", "Order", "`]."
    )]
    pub fn scores(&self) -> &OrderScoresKorumaValidationError {
        &self.scores
    }
}
impl ::koruma::ValidationError for OrderKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.scores.is_empty()
    }
}
impl ::koruma::ValidationIssues for OrderKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        for (__koruma_index, __koruma_element_error) in self.scores.element_errors() {
            if __koruma_element_error.generic_range_validation().is_some() {
                __koruma_issues
                    .push(
                        ::koruma::ValidationIssue::element(
                            "scores",
                            *__koruma_index,
                            ::core::any::type_name::<GenericRangeValidation<f64>>(),
                            None,
                            ::std::format!(
                                "validation failed for `{}`", "GenericRangeValidation"
                            ),
                            ::std::vec::Vec::new(),
                        ),
                    );
            }
        }
        __koruma_issues
    }
}
impl Order {
    #[doc = concat!(
        "Validates all fields of `", "Order",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), OrderKorumaValidationError> {
        let mut error = OrderKorumaValidationError {
            scores: OrderScoresKorumaValidationError {
                element_errors: Vec::new(),
            },
        };
        let mut has_error = false;
        {
            ::koruma::__private::assert_each_collection_ref::<Vec<f64>, f64>();
        }
        for (idx, __item_value) in self.scores.iter().enumerate() {
            let mut element_error = OrderScoresElementKorumaValidationError {
                generic_range_validation: None,
            };
            let mut element_has_error = false;
            {
                let __koruma_builder = GenericRangeValidation::<f64>::min(0.0)
                    .max(100.0);
                ::koruma::__private::assert_element_validator_ready::<
                    _,
                    f64,
                    GenericRangeValidation<f64>,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __item_value,
                    ),
                );
                if !<GenericRangeValidation<
                    f64,
                > as ::koruma::Validate<f64>>::validate(&validator, __item_value) {
                    element_error.generic_range_validation = Some(validator);
                    element_has_error = true;
                }
            }
            if element_has_error {
                error.scores.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Order {
    type Error = OrderKorumaValidationError;
    fn validate(&self) -> Result<(), OrderKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Order {}
