crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_each_multiple_validators.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/koruma.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Element validators for the `", "values", "` field of [`", "Order", "`]: [`",
    "RangeValidation`], `[EvenValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum OrderValuesElementKorumaValidatorRef<'koruma> {
    RangeValidation(&'koruma RangeValidation),
    EvenValidation(&'koruma EvenValidation),
}
#[doc = concat!(
    "Per-element validation errors for the `", "values", "` field of [`", "Order", "`]."
)]
#[derive(Debug, Default)]
pub struct OrderValuesElementKorumaValidationError {
    range_validation: Option<RangeValidation>,
    even_validation: Option<EvenValidation>,
}
impl OrderValuesElementKorumaValidationError {
    #[doc = concat!("Returns the failed `", "RangeValidation", "` validator, if any.")]
    pub fn range_validation(&self) -> Option<&RangeValidation> {
        self.range_validation.as_ref()
    }
    #[doc = concat!("Returns the failed `", "EvenValidation", "` validator, if any.")]
    pub fn even_validation(&self) -> Option<&EvenValidation> {
        self.even_validation.as_ref()
    }
    #[doc = concat!("Returns all failed element validators for `", "values", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = OrderValuesElementKorumaValidatorRef<'_>> + '_ {
        [
            self
                .range_validation
                .as_ref()
                .map(OrderValuesElementKorumaValidatorRef::RangeValidation),
            self
                .even_validation
                .as_ref()
                .map(OrderValuesElementKorumaValidatorRef::EvenValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none() && self.even_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for the `", "values", "` field of [`", "Order",
    "`] (element validators only)."
)]
#[derive(Debug, Default)]
pub struct OrderValuesKorumaValidationError {
    element_errors: Vec<(usize, OrderValuesElementKorumaValidationError)>,
}
impl OrderValuesKorumaValidationError {
    #[doc = concat!(
        "Returns all element validation errors for `", "values", "` of [`", "Order",
        "`] with their indices."
    )]
    pub fn element_errors(&self) -> &[(usize, OrderValuesElementKorumaValidationError)] {
        &self.element_errors
    }
    pub fn is_empty(&self) -> bool {
        self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Order", "`].\n\nContains per-field error structs for ",
    "field: `values`", "."
)]
#[derive(Debug, Default)]
pub struct OrderKorumaValidationError {
    values: OrderValuesKorumaValidationError,
}
impl OrderKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "values", "` field of [`", "Order", "`]."
    )]
    pub fn values(&self) -> &OrderValuesKorumaValidationError {
        &self.values
    }
}
impl ::koruma::ValidationError for OrderKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.values.is_empty()
    }
}
impl ::koruma::ValidationIssues for OrderKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        for (__koruma_index, __koruma_element_error) in self.values.element_errors() {
            if __koruma_element_error.range_validation().is_some() {
                __koruma_issues
                    .push(
                        ::koruma::ValidationIssue::element(
                            "values",
                            *__koruma_index,
                            ::core::any::type_name::<RangeValidation>(),
                            None,
                            ::std::format!(
                                "validation failed for `{}`", "RangeValidation"
                            ),
                            ::std::vec::Vec::new(),
                        ),
                    );
            }
            if __koruma_element_error.even_validation().is_some() {
                __koruma_issues
                    .push(
                        ::koruma::ValidationIssue::element(
                            "values",
                            *__koruma_index,
                            ::core::any::type_name::<EvenValidation>(),
                            None,
                            ::std::format!(
                                "validation failed for `{}`", "EvenValidation"
                            ),
                            ::std::vec::Vec::new(),
                        ),
                    );
            }
        }
        __koruma_issues
    }
}
impl Order {
    #[doc = concat!(
        "Validates all fields of `", "Order",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), OrderKorumaValidationError> {
        let mut error = OrderKorumaValidationError {
            values: OrderValuesKorumaValidationError {
                element_errors: Vec::new(),
            },
        };
        let mut has_error = false;
        {
            ::koruma::__private::assert_each_collection_ref::<Vec<i32>, i32>();
        }
        for (idx, __item_value) in self.values.iter().enumerate() {
            let mut element_error = OrderValuesElementKorumaValidationError {
                range_validation: None,
                even_validation: None,
            };
            let mut element_has_error = false;
            {
                let __koruma_builder = RangeValidation::min(0).max(100);
                ::koruma::__private::assert_element_validator_ready::<
                    _,
                    i32,
                    RangeValidation,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __item_value,
                    ),
                );
                if !<RangeValidation as ::koruma::Validate<
                    i32,
                >>::validate(&validator, __item_value) {
                    element_error.range_validation = Some(validator);
                    element_has_error = true;
                }
            }
            {
                let __koruma_builder = EvenValidation::__koruma_builder();
                ::koruma::__private::assert_element_validator_ready::<
                    _,
                    i32,
                    EvenValidation,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        __item_value,
                    ),
                );
                if !<EvenValidation as ::koruma::Validate<
                    i32,
                >>::validate(&validator, __item_value) {
                    element_error.even_validation = Some(validator);
                    element_has_error = true;
                }
            }
            if element_has_error {
                error.values.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Order {
    type Error = OrderKorumaValidationError;
    fn validate(&self) -> Result<(), OrderKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Order {}
