crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_full_optional_element_target_path.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/optional_collection.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Element validators for the `", "values", "` field of [`", "OptionalElementPresence",
    "`]: [`", "RequiredValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum OptionalElementPresenceValuesElementKorumaValidatorRef<'koruma> {
    RequiredValidation(&'koruma RequiredValidation<Option<i32>>),
}
#[doc = concat!(
    "Per-element validation errors for the `", "values", "` field of [`",
    "OptionalElementPresence", "`]."
)]
#[derive(Debug, Default)]
pub struct OptionalElementPresenceValuesElementKorumaValidationError {
    required_validation: Option<RequiredValidation<Option<i32>>>,
}
impl OptionalElementPresenceValuesElementKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "RequiredValidation", "` validator, if any."
    )]
    pub fn required_validation(&self) -> Option<&RequiredValidation<Option<i32>>> {
        self.required_validation.as_ref()
    }
    #[doc = concat!("Returns all failed element validators for `", "values", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<
        Item = OptionalElementPresenceValuesElementKorumaValidatorRef<'_>,
    > + '_ {
        [
            self
                .required_validation
                .as_ref()
                .map(
                    OptionalElementPresenceValuesElementKorumaValidatorRef::RequiredValidation,
                ),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.required_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for the `", "values", "` field of [`", "OptionalElementPresence",
    "`] (element validators only)."
)]
#[derive(Debug, Default)]
pub struct OptionalElementPresenceValuesKorumaValidationError {
    element_errors: Vec<
        (usize, OptionalElementPresenceValuesElementKorumaValidationError),
    >,
}
impl OptionalElementPresenceValuesKorumaValidationError {
    #[doc = concat!(
        "Returns all element validation errors for `", "values", "` of [`",
        "OptionalElementPresence", "`] with their indices."
    )]
    pub fn element_errors(
        &self,
    ) -> &[(usize, OptionalElementPresenceValuesElementKorumaValidationError)] {
        &self.element_errors
    }
    pub fn is_empty(&self) -> bool {
        self.element_errors.is_empty()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "OptionalElementPresence",
    "`].\n\nContains per-field error structs for ", "field: `values`", "."
)]
#[derive(Debug, Default)]
pub struct OptionalElementPresenceKorumaValidationError {
    values: OptionalElementPresenceValuesKorumaValidationError,
}
impl OptionalElementPresenceKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "values", "` field of [`",
        "OptionalElementPresence", "`]."
    )]
    pub fn values(&self) -> &OptionalElementPresenceValuesKorumaValidationError {
        &self.values
    }
}
impl ::koruma::ValidationError for OptionalElementPresenceKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.values.is_empty()
    }
}
impl ::koruma::ValidationIssues for OptionalElementPresenceKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        for (__koruma_index, __koruma_element_error) in self.values.element_errors() {
            if __koruma_element_error.required_validation().is_some() {
                __koruma_issues
                    .push(
                        ::koruma::ValidationIssue::element(
                            "values",
                            *__koruma_index,
                            ::core::any::type_name::<RequiredValidation<Option<i32>>>(),
                            None,
                            ::std::format!(
                                "validation failed for `{}`", "RequiredValidation"
                            ),
                            ::std::vec::Vec::new(),
                        ),
                    );
            }
        }
        __koruma_issues
    }
}
impl OptionalElementPresence {
    #[doc = concat!(
        "Validates all fields of `", "OptionalElementPresence",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), OptionalElementPresenceKorumaValidationError> {
        let mut error = OptionalElementPresenceKorumaValidationError {
            values: OptionalElementPresenceValuesKorumaValidationError {
                element_errors: Vec::new(),
            },
        };
        let mut has_error = false;
        {
            ::koruma::__private::assert_each_collection_ref::<
                Vec<Option<i32>>,
                Option<i32>,
            >();
        }
        for (idx, item) in self.values.iter().enumerate() {
            let mut element_error = OptionalElementPresenceValuesElementKorumaValidationError {
                required_validation: None,
            };
            let mut element_has_error = false;
            {
                let __koruma_builder = RequiredValidation::<
                    Option<i32>,
                >::__koruma_builder();
                ::koruma::__private::assert_element_validator_ready::<
                    _,
                    Option<i32>,
                    RequiredValidation<Option<i32>>,
                >(&__koruma_builder);
                let validator = ::koruma::__private::BuildValidator::build_validator(
                    ::koruma::__private::CaptureValueRef::capture_value_ref(
                        __koruma_builder,
                        item,
                    ),
                );
                if !<RequiredValidation<
                    Option<i32>,
                > as ::koruma::Validate<Option<i32>>>::validate(&validator, item) {
                    element_error.required_validation = Some(validator);
                    element_has_error = true;
                }
            }
            if let Some(__item_value) = item {}
            if element_has_error {
                error.values.element_errors.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for OptionalElementPresence {
    type Error = OptionalElementPresenceKorumaValidationError;
    fn validate(&self) -> Result<(), OptionalElementPresenceKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for OptionalElementPresence {}
