crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_generic_validator.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/koruma.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Validators for the `", "score", "` field of [`", "GenericItem", "`]: [`",
    "GenericRangeValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum GenericItemScoreKorumaValidatorRef<'koruma> {
    GenericRangeValidation(&'koruma GenericRangeValidation<f64>),
}
#[doc = concat!(
    "Validation errors for the `", "score", "` field of [`", "GenericItem",
    "`].\n\nValidators: [`", "GenericRangeValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct GenericItemScoreKorumaValidationError {
    generic_range_validation: Option<GenericRangeValidation<f64>>,
}
impl GenericItemScoreKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "GenericRangeValidation", "` validator, if any."
    )]
    pub fn generic_range_validation(&self) -> Option<&GenericRangeValidation<f64>> {
        self.generic_range_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "score", "`.")]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = GenericItemScoreKorumaValidatorRef<'_>> + '_ {
        [
            self
                .generic_range_validation
                .as_ref()
                .map(GenericItemScoreKorumaValidatorRef::GenericRangeValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "GenericItem",
    "`].\n\nContains per-field error structs for ", "field: `score`", "."
)]
#[derive(Debug, Default)]
pub struct GenericItemKorumaValidationError {
    score: GenericItemScoreKorumaValidationError,
}
impl GenericItemKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "score", "` field of [`", "GenericItem",
        "`]."
    )]
    pub fn score(&self) -> &GenericItemScoreKorumaValidationError {
        &self.score
    }
}
impl ::koruma::ValidationError for GenericItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.score.is_empty()
    }
}
impl ::koruma::ValidationIssues for GenericItemKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.score.generic_range_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "score",
                        ::core::any::type_name::<GenericRangeValidation<f64>>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "GenericRangeValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl GenericItem {
    #[doc = concat!(
        "Validates all fields of `", "GenericItem",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), GenericItemKorumaValidationError> {
        let mut error = GenericItemKorumaValidationError {
            score: GenericItemScoreKorumaValidationError {
                generic_range_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.score;
        {
            let __koruma_builder = GenericRangeValidation::<f64>::min(0.0).max(100.0);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                f64,
                GenericRangeValidation<f64>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<GenericRangeValidation<
                f64,
            > as ::koruma::Validate<f64>>::validate(&validator, __field_value) {
                error.score.generic_range_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for GenericItem {
    type Error = GenericItemKorumaValidationError;
    fn validate(&self) -> Result<(), GenericItemKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for GenericItem {}
